# taskbrew

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCH-COMPLIANCE-CD153.md  AUDIT_REPORT.md  CD-164-VERIFICATION-CD-145-READY-TO-MERGE.md  CHANGELOG.md  CODE_REVIEW_RV-179.md  CODE_REVIEW_RV-253.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW-RV-261-REJECTION.md  docker-compose.yaml  pyproject.toml
.githooks/: commit-msg  pre-commit  pre-merge-commit
artifacts/: ARCH-REVIEW-017-branching-policy-trivial-fix-exemptions.md  CONFIG-AUDIT-FINDINGS.md  TECH-DESIGN-010-flappy-bird.md
audit/: findings_01_core.md  findings_02_agents.md  findings_03_orchestrator.md  findings_04_migration.md  findings_05_tools.md  findings_06a_intel_planning.md  findings_06b_intel_autonomy.md  findings_07a_intel_code.md  findings_07b_intel_knowledge.md  findings_08a_intel_security.md  findings_08b_intel_qa.md  findings_09_intel_collab.md  findings_10_dashboard_small.md  findings_11a_dashboard_big1.md  findings_11b_dashboard_big2.md  findings_12a_dashboard_intel_v1v2.md  findings_12b_dashboard_intel_v3.md  findings_13_frontend_js.md  findings_14_templates.md  findings_15_css.md  findings_16_tests.md  findings_17_infra_config.md  findings_18_cross_cutting.md
config/: team.yaml
docs/: CD-150-feat-cd-040-branch-cleanup.md  RV-123-independent-verification.md  architecture.md  branching-policy.md  configuration.md  extending.md  getting-started.md
flappy-bird/: ARCH-DECISION-CD097-CD099-CONFLICT.md  CODE_REVIEW_RV-219.md  DEVIATION-ANALYSIS.md  QA-REPORT-TS096.md  README.md  background-qa.test.js  bird-qa.test.js  bug002-fix-qa.test.js  ceiling-collision-qa.test.js  collision-qa.test.js  full-game-qa.test.js  game-skeleton-qa.test.js  game.js  game.test.js  html-css-qa.test.js  index.html  input.test.js  overlay-qa.test.js  package-lock.json  package.json  pipe.test.js  playing-state.test.js  rebase-verification-ts182.md  render-qa.test.js  style.css  ts-036-pipe-color-qa.test.js  ts-043-merge-qa.test.js
pipelines/: bugfix.yaml  code_review.yaml  feature_dev.yaml
plugins/: README.md
qa-reports/: RV-220-code-review-approval.md
scripts/: check-merge-scope.sh
tests/: conftest.py  test_agent_base.py  test_agent_loop.py  test_agent_loop_unit.py  test_agent_questions.py  test_agent_roles.py  test_analytics_router.py  test_artifact_store.py  test_artifact_store_v2.py  test_auth.py  test_auto_scaler.py  test_chat_endpoints.py  test_chat_manager.py  test_cli_commands.py  test_codex_cli.py  test_collaboration.py  test_comparison.py  test_config_loader.py  test_config_validation.py  (+85 more)
(+194 files in other folders)
